--- a/app/views/supplier/index.html.erb
+++ b/app/views/supplier/index.html.erb
@@ -8,7 +8,7 @@
 				<h6 class="m-0 text-white">Fornecedores</h6>
 			</div>
 			<div class="card-body p-0 pb-3 text-center">
-				<table class="table mb-0" id="junior_enterprises">
+				<table class="table mb-0" >
 					<thead class="bg-light">
 						<tr>
 						<th scope="col" class="border-0">#</th>
@@ -27,7 +27,12 @@
 								<td><%= supplier.email %></td>
                 <td><%= supplier.category%></td>
 								<td>
-                  <i class="btn btn-info material-icons " title="editar fornecedor">edit</i>
+                  <%= link_to supplier_show_path(supplier) do%>
+                    <i class="btn btn-primary material-icons " title="editar fornecedor">visibility</i>
+                  <%end%>
+                  <%=link_to supplier_edit_path(supplier) do%>
+                    <i class="btn btn-info material-icons " title="editar fornecedor">edit</i>
+                  <%end%>                  
                   <%= link_to supplier_delete_path(supplier), method: :delete do%>
 									  <i class="btn btn-danger material-icons " title="deletar fornecedor">close</i>
                   <% end %>
