--- a/app/views/supplier/index.html.erb
+++ b/app/views/supplier/index.html.erb
@@ -1,14 +1,11 @@
 <h1 id="main-title">Fornecedores</h1>
 <br>
 
-<div class="row" id="ej-list">
+<div class="row" id="supplier-list">
 	<div class="col">
 		<div class="card card-small mb-4">
-			<div class="card-header border-bottom bg-f-green">
-				<h6 class="m-0 text-white">Fornecedores</h6>
-			</div>
 			<div class="card-body p-0 pb-3 text-center">
-				<table class="table mb-0" >
+				<table class="table mb-0" id="suppliers" >
 					<thead class="bg-light">
 						<tr>
 						<th scope="col" class="border-0">#</th>
@@ -33,8 +30,8 @@
                   <%=link_to supplier_edit_path(supplier) do%>
                     <i class="btn btn-info material-icons " title="editar fornecedor">edit</i>
                   <%end%>                  
-                  <%= link_to supplier_delete_path(supplier), method: :delete do%>
-									  <i class="btn btn-danger material-icons " title="deletar fornecedor">close</i>
+                  <%= link_to supplier_delete_path(supplier), method: :delete, id:'delete' do%>
+									  <i class="btn btn-danger material-icons" title="deletar fornecedor">close</i>
                   <% end %>
 								</td>
 								<% cont = cont + 1%>
@@ -46,3 +43,7 @@
 		</div>
 	</div>
 </div>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.3.1/dt-1.10.25/datatables.min.css"/>
+ 
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jq-3.3.1/dt-1.10.25/datatables.min.js"></script>
+<%= javascript_include_tag 'index', 'data-turbolinks-track': 'reload'%>
